<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.example</groupId>
  <artifactId>jdbc-example</artifactId>
  <version>1.0-SNAPSHOT</version>
  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
    </repository>
  </repositories>
  <!--Dependencias para usar la base de datos (En este caso, de postgressql)-->
  <dependencies>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
<<<<<<< Updated upstream
  <!--No cambiar la versión pese a que indique que es vulnerable. La versión que recomienda no la encuentra y deja de funcionar-->
      <version>42.2.20</version>
=======
      <version>42.3.9</version>
>>>>>>> Stashed changes
    </dependency>
  </dependencies>
  <build>
    <plugins>
  <!--Plugins de Maven para el uso de interfaz-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>